--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # numero máximo de requisiçòes dentro da janela de segundos
-IP_REQUEST_LIMIT=10  
-
+IP_MAX_REQUESTS=10  
 # tamanho da janela de requisiçòes por ip
-IP_DEFAULT_WINDOW_SECONDS=1
+IP_MAX_REQUESTS_WINDOW_SECONDS=1
+
+TOKENS=[{"name": "tkn_123", "limit": 20}, {"name": "tkn_456", "limit": 30}]
 
 # tempo
 COOLDOWN_SECONDS=3
-TOKEN_DEFAULT_COOLDOWN_SECONDS=2
 WEB_SERVER_PORT=:8080
 
 REDIS_HOST=rate-limiter-redis
