--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: '3'
 services:
   redis:
     image: 'redis:latest'
-    container_name: 'redis-container'
+    container_name: 'rate-limiter-redis'
     ports:
       - '6379:6379'
