--- a/cmd/.env
+++ b/cmd/.env
@@ -3,11 +3,12 @@ MAX_REQUESTS=10
 TOKENS=[{"name": "tkn_123", "max_requests": 20, "cooldown_seconds": 3}, {"name": "tkn_456", "max_requests": 30, "cooldown_seconds":4}]
 
 TTL_SECONDS=1
-COOLDOWN_SECONDS=5
+COOLDOWN_SECONDS=1
 
 WEB_SERVER_PORT=:8080
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
+DB_HOST=localhost
+DB_PORT=6379
+DB_USER=
+DB_PASSWORD=
+DB_NAME=0
